# tcltl

./: .gitignore  .travis.yml  AUTHORS  Makefile.am  NEWS  README  THANKS  configure.ac
.ci-scripts/: install-catch2.sh  install-spot.sh  install-tchecker.sh
lib/: Makefile.am
m4/: gnulib-cache.m4  gnulib-comp.m4
python/spot-extra/: tchecker.i
src/: tcltl.cc  tcltl.hh
tests/: basic.test  dead.test  defs.in  errcli.test  errclout.test  notebook.ipynb  parseerr.ipynb  python.py  run.in
